--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
+    "react-toastify": "^9.0.5",
     "sass": "^1.52.2",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
